--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@headlessui/react": "1.7.17",
+    "@heroicons/react": "2.1.1",
     "@hookform/resolvers": "^3.3.2",
     "@radix-ui/react-radio-group": "^1.1.3",
     "@radix-ui/react-select": "2.0.0",
